# OpenPattern

./: .gitignore  Makefile  README.md  pyproject.toml  test.py
OpenPattern/: Bodices.py  Pattern.py
OpenPattern/data/: __init__.py  measurements.db
